test/Serialization/access-level-import-dependencies.code
/// Check that non-public dependencies are hidden from clients.

// RUN: %empty-directory(%t)
// RUN: split-file %s %t

/// Prepare a module to hide or show depending on the import access-level.
// RUN: %target-language-frontend -emit-module %t/HiddenDep.code -o %t \
// RUN:   -language-version 5 -enable-library-evolution

//--- HiddenDep.code

//--- PublicDep.code
public import HiddenDep

//--- PackageDep.code
package import HiddenDep

//--- InternalDep.code
internal import HiddenDep

//--- FileprivateDep.code
fileprivate import HiddenDep

//--- PrivateDep.code
private import HiddenDep

/// With resilience, non-public dependencies should be hidden.
// RUN: %target-language-frontend -emit-module %t/PublicDep.code -o %t -I %t \
// RUN:   -enable-library-evolution
// RUN: %target-language-frontend -emit-module %t/PackageDep.code -o %t -I %t \
// RUN:   -enable-library-evolution -package-name MyPackage
// RUN: %target-language-frontend -emit-module %t/InternalDep.code -o %t -I %t \
// RUN:   -enable-library-evolution
// RUN: %target-language-frontend -emit-module %t/FileprivateDep.code -o %t -I %t \
// RUN:   -enable-library-evolution
// RUN: %target-language-frontend -emit-module %t/PrivateDep.code -o %t -I %t \
// RUN:   -enable-library-evolution

// RUN: %target-language-frontend -typecheck %t/ClientOfPublic.code -I %t \
// RUN:   -package-name MyOtherPackage \
// RUN:   -Rmodule-loading 2>&1 | %FileCheck -check-prefix=VISIBLE-DEP %s
// VISIBLE-DEP: loaded module 'HiddenDep'
//--- ClientOfPublic.code
import PublicDep

// RUN: %target-language-frontend -typecheck %t/ClientOfNonPublic.code -I %t \
// RUN:   -package-name pkg \
// RUN:   -Rmodule-loading 2>&1 | %FileCheck -check-prefix=HIDDEN-DEP %s
// HIDDEN-DEP-NOT: loaded module 'HiddenDep'
//--- ClientOfNonPublic.code
import PackageDep
import InternalDep
import FileprivateDep
import PrivateDep

/// Without resilience, all access-level dependencies are visible to clients.
// RUN: %target-language-frontend -emit-module %t/PublicDep.code -o %t -I %t
// RUN: %target-language-frontend -emit-module %t/PackageDep.code -o %t -I %t \
// RUN:   -package-name MyPackage
// RUN: %target-language-frontend -emit-module %t/InternalDep.code -o %t -I %t
// RUN: %target-language-frontend -emit-module %t/FileprivateDep.code -o %t -I %t
// RUN: %target-language-frontend -emit-module %t/PrivateDep.code -o %t -I %t

// RUN: %target-language-frontend -typecheck %t/ClientOfPublic.code -I %t \
// RUN:   -Rmodule-loading 2>&1 | %FileCheck -check-prefix=VISIBLE-DEP %s
// RUN: %target-language-frontend -typecheck %t/ClientOfNonPublic.code -I %t \
// RUN:   -Rmodule-loading 2>&1 | %FileCheck -check-prefix=VISIBLE-DEP %s

/// Even with resilience and testing enabled, all non-public dependencies are
/// hidden if there are no testable imports.
// RUN: %target-language-frontend -emit-module %t/PublicDep.code -o %t -I %t \
// RUN:   -enable-library-evolution -enable-testing
// RUN: %target-language-frontend -emit-module %t/PackageDep.code -o %t -I %t \
// RUN:   -enable-library-evolution -enable-testing -package-name MyPackage
// RUN: %target-language-frontend -emit-module %t/InternalDep.code -o %t -I %t \
// RUN:   -enable-library-evolution -enable-testing
// RUN: %target-language-frontend -emit-module %t/FileprivateDep.code -o %t -I %t \
// RUN:   -enable-library-evolution -enable-testing
// RUN: %target-language-frontend -emit-module %t/PrivateDep.code -o %t -I %t \
// RUN:   -enable-library-evolution -enable-testing

// RUN: %target-language-frontend -typecheck %t/ClientOfPublic.code -I %t \
// RUN:   -Rmodule-loading 2>&1 | %FileCheck -check-prefix=VISIBLE-DEP %s
// RUN: %target-language-frontend -typecheck %t/ClientOfNonPublic.code -I %t \
// RUN:   -Rmodule-loading 2>&1 | %FileCheck -check-prefix=HIDDEN-DEP %s

/// With testable imports, transitive dependencies are required.
//--- TestableClientOfPublic.code
@testable import PublicDep

//--- TestableClientOfNonPublic.code
@testable import PackageDep // expected-error {{missing required module 'HiddenDep'}}
@testable import InternalDep // expected-error {{missing required module 'HiddenDep'}}
@testable import FileprivateDep // expected-error {{missing required module 'HiddenDep'}}
@testable import PrivateDep // expected-error {{missing required module 'HiddenDep'}}

// RUN: %target-language-frontend -typecheck %t/TestableClientOfPublic.code -I %t \
// RUN:   -Rmodule-loading 2>&1 | %FileCheck -check-prefix=VISIBLE-DEP %s
// RUN: %target-language-frontend -typecheck %t/TestableClientOfNonPublic.code -I %t \
// RUN:   -package-name pkg \
// RUN:   -Rmodule-loading 2>&1 | %FileCheck -check-prefix=VISIBLE-DEP %s

/// In the case of a testable of a module reexporting another Codira module,
/// only non-public transitive dependencies from the first module are required.
/// Non-public imports from the reexported modules are not loaded, we could
/// revisit this if desired.
// RUN: %target-language-frontend -emit-module %t/Exporter.code -o %t -I %t \
// RUN:   -enable-library-evolution -enable-testing
// RUN: %target-language-frontend -typecheck %t/ExporterClient.code -I %t \
// RUN:   -index-system-modules -index-ignore-stdlib -index-store-path %t/idx \
// RUN:   -Rmodule-loading 2>&1 | %FileCheck -check-prefixes=CHECK-EXPORTER,HIDDEN-DEP %s
// CHECK-EXPORTER: 'InternalDep' has an ignored transitive dependency on 'HiddenDep'

//--- Exporter.code
@_exported import InternalDep

//--- ExporterClient.code
@testable import Exporter

/// Fail if the transitive dependency is missing.
// RUN: rm %t/HiddenDep.codemodule
// RUN: %target-language-frontend -typecheck %t/TestableClientOfNonPublic.code -I %t \
// RUN:   -package-name pkg \
// RUN:   -verify -show-diagnostics-after-fatal

/// In a multi-file scenario, we try and fail to load the transitive dependency
/// only for @testable imports, not regular imports.
// RUN: %target-language-frontend -typecheck -I %t \
// RUN:   %t/TestableClientOfNonPublic_FileA.code \
// RUN:   %t/TestableClientOfNonPublic_FileB.code \
// RUN:   -verify -show-diagnostics-after-fatal
// RUN: %target-language-frontend -typecheck -wmo -I %t \
// RUN:   %t/TestableClientOfNonPublic_FileA.code \
// RUN:   %t/TestableClientOfNonPublic_FileB.code \
// RUN:   -verify -show-diagnostics-after-fatal

//--- TestableClientOfNonPublic_FileA.code
import InternalDep
@testable import FileprivateDep // expected-error {{missing required module 'HiddenDep'}}

//--- TestableClientOfNonPublic_FileB.code
@testable import InternalDep // expected-error {{missing required module 'HiddenDep'}}
import FileprivateDep
